cabal-version: 2.4
name:          jaskell
version:       0.1.0.0
author:        Owen Bechtel
maintainer:    ombspring@gmail.com

-- TODO: category:
-- TODO: synopsis:

-- TODO: description: 

homepage:           https://github.com/UnaryPlus/jaskell
bug-reports:        https://github.com/UnaryPlus/jaskell/issues
license:            MIT
license-file:       LICENSE
extra-source-files: CHANGELOG.md, README.md

source-repository head
  type: git
  location: https://github.com/UnaryPlus/jaskell.git

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

  exposed-modules:
    Jaskell,
    Jaskell.Prelude,
    Jaskell.Quote

  -- TODO: add bounds
  build-depends:
    base, 
    megaparsec, 
    template-haskell

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test 
  default-language: Haskell2010
  ghc-options:      -Wall
  main-is:          Spec.hs

  other-modules:
    JaskellSpec,
    Jaskell.PreludeSpec,
    Jaskell.QuoteSpec
  
  build-depends: base, hspec, megaparsec, jaskell
  
  build-tool-depends:
    hspec-discover:hspec-discover
